refine homepage design and add reading milestones

--- a/index.html
+++ b/index.html
@@ -5,40 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Yimisda | PKU EECS. Research interests in memristive computing and neuromorphic systems."
+      content="The World I See | PKU EECS. Research interests in memristive computing and neuromorphic systems."
     />
     <meta
       name="keywords"
-      content="Yimisda, PKU, EECS, memristive computing, neuromorphic systems, portfolio"
+      content="The World I See, PKU, EECS, knowledge base, learning system, notes, projects"
     />
     <meta name="author" content="Yimisda" />
-    <meta name="theme-color" content="#6366f1" />
+    <meta name="theme-color" content="#0f766e" />
 
-    <meta property="og:title" content="Yimisda | PKU EECS" />
+    <meta property="og:title" content="The World I See | PKU EECS" />
     <meta
       property="og:description"
-      content="Personal portfolio with research interests in memristive computing and neuromorphic systems."
+      content="Personal knowledge base and learning system bridging coursework, memristive computing research, and daily growth."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yimisda.github.io/" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Yimisda | PKU EECS" />
+    <meta name="twitter:title" content="The World I See | PKU EECS" />
     <meta
       name="twitter:description"
-      content="Personal portfolio with research interests in memristive computing and neuromorphic systems."
+      content="Personal knowledge base and learning system bridging coursework, memristive computing research, and daily growth."
     />
 
     <link
       rel="icon"
       type="image/svg+xml"
-      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%236366f1'/%3E%3Ctext x='50' y='65' font-size='50' text-anchor='middle' fill='white' font-family='Arial'%3EY%3C/text%3E%3C/svg%3E"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%230f766e'/%3E%3Ctext x='50' y='65' font-size='50' text-anchor='middle' fill='white' font-family='Source Serif 4, serif'%3EY%3C/text%3E%3C/svg%3E"
     />
 
-    <title>Yimisda | PKU EECS</title>
+    <title>The World I See | PKU EECS</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&family=Noto+Sans+SC:wght@400;500;600;700&family=Source+Serif+4:wght@600;700&family=Noto+Serif+SC:wght@600;700&display=swap" rel="stylesheet" />
 
     <script type="application/ld+json">
       {
@@ -75,3 +76,5 @@
     </script>
   </body>
 </html>
+
+
